<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- NOTE: edit_profile_fragment is not the id of EditProfileFragment because we do not what the back
    stack PersonalProfileFragment to be removed upon navigation to EditProfileFragment which is the default
    behaviour if we use the EditProfileFragment id-->
    <item
        android:id="@+id/edit_profile_fragment"
        android:icon="@drawable/ic_edit_white_24dp"
        android:orderInCategory="100"
        android:title="@string/edit"
        app:showAsAction="ifRoom" />

    <!--Make sure the menu id matches the navigation destination id if you want the navigation
     to be automatic-->
    <item
        android:id="@+id/nav_graph_call"
        android:icon="@drawable/ic_call_white_24dp"
        android:orderInCategory="101"
        android:title="@string/make_call"
        app:showAsAction="never" />

    <item
        android:id="@+id/nav_graph_sms_list_view"
        android:icon="@drawable/ic_sms_white_24dp"
        android:orderInCategory="102"
        android:title="@string/send_sms"
        app:showAsAction="never" />


    <!-- NOTE: edit_profile_fragment is not the id of EditProfileFragment because we do not what the back
    stack PersonalProfileFragment to be removed upon navigation to EditProfileFragment which is the default
    behaviour if we use the EditProfileFragment id-->
    <item
        android:id="@+id/personal_profile_settings_fragment"
        android:icon="@drawable/ic_build_white_24dp"
        android:orderInCategory="300"
        android:title="@string/title_activity_settings"
        app:showAsAction="never" />

</menu>